--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,14 @@ body{
     background-color: antiquewhite;
 }
 header{
-    border: 2px solid;
+    border: 2px solid brown;
+    height: 50px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
 }
 .logo-text{
+
     font-size: 2em;
     color: brown;
 }
@@ -15,4 +18,59 @@ header{
     display: flex;
     align-items: end;
     gap: 30px;
+}
+.main-book-list{
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    gap:20px
+    
+}
+.book-content{
+    
+    border: 1px solid;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+}
+.book-image{
+    border-radius:10px;
+    width: 100%;
+    height: 300px;
+}
+.icon{
+   font-size: 1.3em;
+   display: flex;
+   justify-content: space-between;
+   align-items: flex-end;
+   gap: 10px;
+   color: brown;
+  
+}
+.icon-gap{
+    display: flex;
+    gap: 10px;
+}
+.paragraph{
+    height: 150px;
+    font-style: italic;
+ 
+}
+.book-datail-page{
+    padding: 20px;
+    align-items: center;
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+}
+.detial-image{
+    width: 400px;
+    height: 400px;
+}
+.detail-para{
+    width: 500px;
+}
+.checkout-btn{
+    width: 300px;
+    height: 50px;
 }
